# LiveWallpaperMacOS

./: .gitignore  AppIcon.icns  Assets.car  CMakeLists.txt  ContentView.swift  DisplayManager.h  DisplayObjc.h  DisplayObjc.mm  LICENSE  LineModule.h  LineModule.m  LiveWallpaper-Bridging-Header.h  LiveWallpaper.mm  LiveWallpaperApp  LiveWallpaperApp.swift  LoadingOverlay.h  LoadingOverlay.mm  README.md  SaveSystem.h  SaveSystem.mm  WallpaperEngine.h  WallpaperEngine.mm  build.sh  custom-Info.plist.in  index.html
.github/workflows/: bump-cask.yml
Assets.xcassets/AppIcon/Assets/roller 2.imageset/: Contents.json
Assets.xcassets/AppIcon/icon.dataset/: icon.json
Daemon/: CMakeLists.txt  daemon.mm
Deamon/: CMakeLists.txt  deamon.mm
LiveWallpaper.xcodeproj/: project.pbxproj
LiveWallpaper.xcodeproj/project.xcworkspace/xcuserdata/mac.xcuserdatad/: UserInterfaceState.xcuserstate
LiveWallpaper.xcodeproj/xcuserdata/mac.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
LiveWallpaper.xcodeproj/xcuserdata/mac.xcuserdatad/xcschemes/: xcschememanagement.plist
asset/: livewall.icns
wallpaperdaemon/: daemon.mm
